コメント機能実装中 画面遷移

--- a/At a stadium/Base.lproj/Main.storyboard
+++ b/At a stadium/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="iJG-Xq-7ho">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="iJG-Xq-7ho">
     <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -211,17 +211,48 @@
         <!--Comment View Controller-->
         <scene sceneID="iCu-fw-aB4">
             <objects>
-                <viewController storyboardIdentifier="Comment" id="g0d-Rj-Maj" customClass="CommentViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Comment" id="g0d-Rj-Maj" customClass="CommentViewController" customModule="At_a_stadium" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="zbL-dn-1KC">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="475"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="VcO-S0-KUK">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="425"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </tableView>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UIj-XS-kk3">
+                                <rect key="frame" x="9" y="434" width="252" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OlR-BG-Hk5">
+                                <rect key="frame" x="273" y="436" width="31" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="送信"/>
+                                <connections>
+                                    <action selector="handleCommentPostButton:" destination="g0d-Rj-Maj" eventType="touchUpInside" id="zwt-Si-ZNv"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="9h0-pj-7Gu" firstAttribute="trailing" secondItem="VcO-S0-KUK" secondAttribute="trailing" id="6Em-zm-zLb"/>
+                            <constraint firstItem="9h0-pj-7Gu" firstAttribute="bottom" secondItem="VcO-S0-KUK" secondAttribute="bottom" id="NwX-su-HdD"/>
+                            <constraint firstItem="VcO-S0-KUK" firstAttribute="top" secondItem="9h0-pj-7Gu" secondAttribute="top" id="kd9-uk-vK9"/>
+                            <constraint firstItem="VcO-S0-KUK" firstAttribute="leading" secondItem="9h0-pj-7Gu" secondAttribute="leading" id="xxi-g6-E7i"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="9h0-pj-7Gu"/>
                     </view>
+                    <navigationItem key="navigationItem" id="Ybq-Mm-XvO"/>
+                    <connections>
+                        <outlet property="TextField" destination="UIj-XS-kk3" id="8XB-qH-G59"/>
+                        <outlet property="tableView" destination="VcO-S0-KUK" id="vm2-h5-3vp"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EHR-sJ-7qP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-7832" y="2727"/>
+            <point key="canvasLocation" x="-8619.375" y="1852.2887323943662"/>
         </scene>
         <!--Match Data View Controller-->
         <scene sceneID="ZNA-aB-sl5">
@@ -729,7 +760,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OZf-BM-qqx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-8614" y="871"/>
+            <point key="canvasLocation" x="-9392" y="932"/>
         </scene>
         <!--Settings Table View Controller-->
         <scene sceneID="3Y8-ko-GaK">
@@ -1730,11 +1761,12 @@
                     <connections>
                         <outlet property="tableView" destination="JPy-hs-rCu" id="Ns3-1W-aqO"/>
                         <segue destination="6VO-WI-arU" kind="show" identifier="toRelatedHomeVC" id="lRU-Cc-LVF"/>
+                        <segue destination="g0d-Rj-Maj" kind="show" identifier="Comment" id="vai-Ju-G7W"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Go4-Ln-aD2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-7749" y="861"/>
+            <point key="canvasLocation" x="-8451" y="490"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="uZO-V9-NEJ">
