--- a/At a stadium/Comment/CommentTableViewCell.xib
+++ b/At a stadium/Comment/CommentTableViewCell.xib
@@ -9,15 +9,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="151" id="KGk-i7-Jjw" customClass="CommentTableViewCell" customModule="At_a_stadium" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="151"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="103" id="KGk-i7-Jjw" customClass="CommentTableViewCell" customModule="At_a_stadium" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="103"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="151"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="103"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="752" text="コメントコメントコメント" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bqo-a0-F2Z">
-                        <rect key="frame" x="10" y="68" width="300" height="75"/>
+                        <rect key="frame" x="10" y="68" width="300" height="27"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -90,7 +90,7 @@
                 <outlet property="displayName" destination="kWN-Te-uLd" id="jol-sr-1u5"/>
                 <outlet property="profileImage" destination="hbv-vX-tSO" id="Mi6-NY-WSJ"/>
             </connections>
-            <point key="canvasLocation" x="140.57971014492756" y="166.40625"/>
+            <point key="canvasLocation" x="140.57971014492756" y="150.33482142857142"/>
         </tableViewCell>
     </objects>
     <resources>
