--- a/At a stadium/Base.lproj/Main.storyboard
+++ b/At a stadium/Base.lproj/Main.storyboard
@@ -232,21 +232,23 @@
                                             <action selector="handleCommentPostButton:" destination="g0d-Rj-Maj" eventType="touchUpInside" id="CvW-Sl-fQ5"/>
                                         </connections>
                                     </button>
-                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="U5g-GN-Im9">
-                                        <rect key="frame" x="10" y="5" width="264" height="45"/>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="35S-Ha-l6X">
+                                        <rect key="frame" x="5" y="5" width="269" height="45"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <color key="textColor" systemColor="labelColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="Q5S-Ir-y1J" secondAttribute="trailing" constant="10" id="2Lt-9o-8LW"/>
-                                    <constraint firstAttribute="bottom" secondItem="U5g-GN-Im9" secondAttribute="bottom" constant="5" id="E3X-XY-Jba"/>
+                                    <constraint firstItem="Q5S-Ir-y1J" firstAttribute="leading" secondItem="35S-Ha-l6X" secondAttribute="trailing" constant="5" id="Au2-Vr-p2f"/>
+                                    <constraint firstAttribute="bottom" secondItem="35S-Ha-l6X" secondAttribute="bottom" constant="5" id="IGJ-mU-sGx"/>
                                     <constraint firstAttribute="height" constant="55" id="NwR-hb-0gw"/>
+                                    <constraint firstItem="35S-Ha-l6X" firstAttribute="top" secondItem="k13-Ab-KLW" secondAttribute="top" constant="5" id="Upz-hT-ryN"/>
                                     <constraint firstItem="Q5S-Ir-y1J" firstAttribute="top" secondItem="k13-Ab-KLW" secondAttribute="top" constant="5" id="Vw5-YX-CHK"/>
-                                    <constraint firstItem="Q5S-Ir-y1J" firstAttribute="leading" secondItem="U5g-GN-Im9" secondAttribute="trailing" constant="5" id="XFf-hp-mIz"/>
-                                    <constraint firstItem="U5g-GN-Im9" firstAttribute="leading" secondItem="k13-Ab-KLW" secondAttribute="leading" constant="10" id="elW-n7-klm"/>
-                                    <constraint firstItem="U5g-GN-Im9" firstAttribute="top" secondItem="k13-Ab-KLW" secondAttribute="top" constant="5" id="osc-Pc-c0e"/>
+                                    <constraint firstItem="35S-Ha-l6X" firstAttribute="leading" secondItem="k13-Ab-KLW" secondAttribute="leading" constant="5" id="jNT-6K-chJ"/>
                                     <constraint firstAttribute="bottom" secondItem="Q5S-Ir-y1J" secondAttribute="bottom" constant="5" id="sqw-lk-GzM"/>
                                 </constraints>
                             </view>
@@ -265,8 +267,8 @@
                     </view>
                     <navigationItem key="navigationItem" id="Ybq-Mm-XvO"/>
                     <connections>
-                        <outlet property="TextField" destination="U5g-GN-Im9" id="mcq-4m-25U"/>
-                        <outlet property="tableView" destination="VcO-S0-KUK" id="vm2-h5-3vp"/>
+                        <outlet property="UITextView" destination="35S-Ha-l6X" id="cRh-5L-eS8"/>
+                        <outlet property="tableView" destination="VcO-S0-KUK" id="TQ7-og-qDS"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EHR-sJ-7qP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
