--- a/At a stadium/Base.lproj/Main.storyboard
+++ b/At a stadium/Base.lproj/Main.storyboard
@@ -215,65 +215,73 @@
             <objects>
                 <viewController storyboardIdentifier="Comment" id="g0d-Rj-Maj" customClass="CommentViewController" customModule="At_a_stadium" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="zbL-dn-1KC">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="475"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="640"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="VcO-S0-KUK">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="420"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="4gJ-Wm-2PY">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="580"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="k13-Ab-KLW">
-                                <rect key="frame" x="0.0" y="420" width="320" height="55"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0TJ-gB-Akr">
+                                <rect key="frame" x="0.0" y="580" width="320" height="60"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q5S-Ir-y1J">
-                                        <rect key="frame" x="279" y="5" width="31" height="45"/>
-                                        <state key="normal" title="送信"/>
-                                        <connections>
-                                            <action selector="handleCommentPostButton:" destination="g0d-Rj-Maj" eventType="touchUpInside" id="CvW-Sl-fQ5"/>
-                                        </connections>
-                                    </button>
-                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="35S-Ha-l6X">
-                                        <rect key="frame" x="5" y="5" width="269" height="45"/>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="あああああ" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="gAo-dP-xPm">
+                                        <rect key="frame" x="8" y="15" width="236" height="35"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <color key="textColor" systemColor="labelColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1DH-Ec-nJj">
+                                        <rect key="frame" x="252" y="15" width="60" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="67q-sH-fBd"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="60" id="ikJ-kn-vuD"/>
+                                        </constraints>
+                                        <state key="normal" title="Button"/>
+                                        <connections>
+                                            <action selector="handleCommentPostButton:" destination="g0d-Rj-Maj" eventType="touchUpInside" id="Xmh-Td-E9u"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="Q5S-Ir-y1J" secondAttribute="trailing" constant="10" id="2Lt-9o-8LW"/>
-                                    <constraint firstItem="Q5S-Ir-y1J" firstAttribute="leading" secondItem="35S-Ha-l6X" secondAttribute="trailing" constant="5" id="Au2-Vr-p2f"/>
-                                    <constraint firstAttribute="bottom" secondItem="35S-Ha-l6X" secondAttribute="bottom" constant="5" id="IGJ-mU-sGx"/>
-                                    <constraint firstAttribute="height" constant="55" id="NwR-hb-0gw"/>
-                                    <constraint firstItem="35S-Ha-l6X" firstAttribute="top" secondItem="k13-Ab-KLW" secondAttribute="top" constant="5" id="Upz-hT-ryN"/>
-                                    <constraint firstItem="Q5S-Ir-y1J" firstAttribute="top" secondItem="k13-Ab-KLW" secondAttribute="top" constant="5" id="Vw5-YX-CHK"/>
-                                    <constraint firstItem="35S-Ha-l6X" firstAttribute="leading" secondItem="k13-Ab-KLW" secondAttribute="leading" constant="5" id="jNT-6K-chJ"/>
-                                    <constraint firstAttribute="bottom" secondItem="Q5S-Ir-y1J" secondAttribute="bottom" constant="5" id="sqw-lk-GzM"/>
+                                    <constraint firstAttribute="height" constant="60" id="2Ac-RP-QQq"/>
+                                    <constraint firstAttribute="trailing" secondItem="1DH-Ec-nJj" secondAttribute="trailing" constant="8" id="FZ2-lf-TUQ"/>
+                                    <constraint firstItem="1DH-Ec-nJj" firstAttribute="leading" secondItem="gAo-dP-xPm" secondAttribute="trailing" constant="8" id="Gh0-D2-PrB"/>
+                                    <constraint firstAttribute="bottom" secondItem="gAo-dP-xPm" secondAttribute="bottom" constant="10" id="LRr-eC-Iao"/>
+                                    <constraint firstItem="gAo-dP-xPm" firstAttribute="top" secondItem="0TJ-gB-Akr" secondAttribute="top" constant="15" id="TAE-hx-pBr"/>
+                                    <constraint firstItem="1DH-Ec-nJj" firstAttribute="top" secondItem="0TJ-gB-Akr" secondAttribute="top" constant="15" id="ixT-nJ-Pan"/>
+                                    <constraint firstItem="gAo-dP-xPm" firstAttribute="leading" secondItem="0TJ-gB-Akr" secondAttribute="leading" constant="8" id="qZN-r2-1wk"/>
+                                    <constraint firstItem="1DH-Ec-nJj" firstAttribute="trailing" secondItem="0TJ-gB-Akr" secondAttribute="trailingMargin" id="sGC-bP-y3J"/>
                                 </constraints>
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="9h0-pj-7Gu"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="9h0-pj-7Gu" firstAttribute="trailing" secondItem="k13-Ab-KLW" secondAttribute="trailing" id="DFB-fd-Kto"/>
-                            <constraint firstItem="VcO-S0-KUK" firstAttribute="top" secondItem="9h0-pj-7Gu" secondAttribute="top" id="G3F-uU-yiM"/>
-                            <constraint firstItem="9h0-pj-7Gu" firstAttribute="bottom" secondItem="k13-Ab-KLW" secondAttribute="bottom" id="H9a-tF-uep"/>
-                            <constraint firstItem="VcO-S0-KUK" firstAttribute="leading" secondItem="9h0-pj-7Gu" secondAttribute="leading" id="HA4-HJ-AiO"/>
-                            <constraint firstItem="VcO-S0-KUK" firstAttribute="trailing" secondItem="9h0-pj-7Gu" secondAttribute="trailing" id="Tt4-MY-XTQ"/>
-                            <constraint firstItem="k13-Ab-KLW" firstAttribute="leading" secondItem="9h0-pj-7Gu" secondAttribute="leading" id="eN3-8Y-wbO"/>
-                            <constraint firstItem="k13-Ab-KLW" firstAttribute="top" secondItem="VcO-S0-KUK" secondAttribute="bottom" id="ygZ-T6-0Th"/>
+                            <constraint firstItem="0TJ-gB-Akr" firstAttribute="bottom" secondItem="9h0-pj-7Gu" secondAttribute="bottom" id="68p-y3-52y"/>
+                            <constraint firstItem="0TJ-gB-Akr" firstAttribute="trailing" secondItem="9h0-pj-7Gu" secondAttribute="trailing" id="6hX-zJ-Vmi"/>
+                            <constraint firstItem="4gJ-Wm-2PY" firstAttribute="top" secondItem="9h0-pj-7Gu" secondAttribute="top" id="B3b-9u-b72"/>
+                            <constraint firstItem="0TJ-gB-Akr" firstAttribute="leading" secondItem="9h0-pj-7Gu" secondAttribute="leading" id="J9t-2t-6pD"/>
+                            <constraint firstItem="9h0-pj-7Gu" firstAttribute="trailing" secondItem="4gJ-Wm-2PY" secondAttribute="trailing" id="UhR-k9-9on"/>
+                            <constraint firstItem="4gJ-Wm-2PY" firstAttribute="leading" secondItem="9h0-pj-7Gu" secondAttribute="leading" id="VNm-EU-JQv"/>
+                            <constraint firstItem="0TJ-gB-Akr" firstAttribute="top" secondItem="4gJ-Wm-2PY" secondAttribute="bottom" id="inC-ei-JVt"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="Ybq-Mm-XvO"/>
+                    <size key="freeformSize" width="320" height="660"/>
                     <connections>
-                        <outlet property="UITextView" destination="35S-Ha-l6X" id="cRh-5L-eS8"/>
-                        <outlet property="tableView" destination="VcO-S0-KUK" id="TQ7-og-qDS"/>
+                        <outlet property="UITextView" destination="gAo-dP-xPm" id="IPF-Lw-NJg"/>
+                        <outlet property="dockView" destination="0TJ-gB-Akr" id="kr8-Oc-BnK"/>
+                        <outlet property="dockViewHeightConstrain" destination="2Ac-RP-QQq" id="cQI-4F-mHd"/>
+                        <outlet property="sendButton" destination="1DH-Ec-nJj" id="25X-Kw-IAT"/>
+                        <outlet property="tableView" destination="4gJ-Wm-2PY" id="Vgs-EL-tpH"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EHR-sJ-7qP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-8454.375" y="1320.9507042253522"/>
+            <point key="canvasLocation" x="-8546.25" y="1400.7042253521126"/>
         </scene>
         <!--Match Data View Controller-->
         <scene sceneID="ZNA-aB-sl5">
@@ -283,7 +291,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="436"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="eQN-go-qlq">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="eQN-go-qlq">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="436"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
@@ -787,7 +795,7 @@
         <scene sceneID="3Y8-ko-GaK">
             <objects>
                 <tableViewController storyboardIdentifier="SettingsTable" id="9Yk-S4-fH4" customClass="SettingsTableViewController" customModule="At_a_stadium" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="1" sectionFooterHeight="1" id="KFx-Xq-9Pi">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="1" sectionFooterHeight="1" id="KFx-Xq-9Pi">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="531"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <sections>
