--- a/At a stadium/Base.lproj/Main.storyboard
+++ b/At a stadium/Base.lproj/Main.storyboard
@@ -219,15 +219,18 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="4gJ-Wm-2PY">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="580"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="585"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0TJ-gB-Akr">
-                                <rect key="frame" x="0.0" y="580" width="320" height="60"/>
+                                <rect key="frame" x="0.0" y="585" width="320" height="55"/>
                                 <subviews>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="あああああ" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="gAo-dP-xPm">
-                                        <rect key="frame" x="8" y="15" width="236" height="35"/>
+                                        <rect key="frame" x="8" y="15" width="236" height="30"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="SOl-mi-w60"/>
+                                        </constraints>
                                         <color key="textColor" systemColor="labelColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -246,7 +249,6 @@
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="60" id="2Ac-RP-QQq"/>
                                     <constraint firstAttribute="trailing" secondItem="1DH-Ec-nJj" secondAttribute="trailing" constant="8" id="FZ2-lf-TUQ"/>
                                     <constraint firstItem="1DH-Ec-nJj" firstAttribute="leading" secondItem="gAo-dP-xPm" secondAttribute="trailing" constant="8" id="Gh0-D2-PrB"/>
                                     <constraint firstAttribute="bottom" secondItem="gAo-dP-xPm" secondAttribute="bottom" constant="10" id="LRr-eC-Iao"/>
@@ -273,7 +275,7 @@
                     <size key="freeformSize" width="320" height="660"/>
                     <connections>
                         <outlet property="dockView" destination="0TJ-gB-Akr" id="pmn-jI-sba"/>
-                        <outlet property="dockViewHeightConstrain" destination="2Ac-RP-QQq" id="L6Y-w0-1gf"/>
+                        <outlet property="dockViewHeightConstrain" destination="SOl-mi-w60" id="cHC-cl-Qgm"/>
                         <outlet property="sendButton" destination="1DH-Ec-nJj" id="HX1-eF-8Xw"/>
                         <outlet property="tableView" destination="4gJ-Wm-2PY" id="a5t-b5-hiY"/>
                         <outlet property="textView" destination="gAo-dP-xPm" id="wUq-L9-ssc"/>
